<resources>
    <string name="app_name">Evently</string>
    <string name="onboarding_title_1">Find Events That Inspire You</string>
    <string name="onboarding_description_1">Dive into a world of events crafted to fit your unique interests. Whether you\'re into live music, art workshops, professional networking, or simply discovering new experiences, we have something for everyone. Our curated recommendations will help you explore, connect, and make the most of every opportunity around you.</string>
    <string name="onboarding_title_2">Effortless Event Planning</string>
    <string name="onboarding_description_2">Take the hassle out of organizing events with our all-in-one planning tools. From setting up invites and managing RSVPs to scheduling reminders and coordinating details, we’ve got you covered. Plan with ease and focus on what matters – creating an unforgettable experience for you and your guests.</string>
    <string name="onboarding_title_3">Connect with Friends &amp; Share Moments</string>
    <string name="onboarding_description_3">Make every event memorable by sharing the experience with others. Our platform lets you invite friends, keep everyone in the loop, and celebrate moments together. Capture and share the excitement with your network, so you can relive the highlights and cherish the memories.</string>
    <string name="onboarding_start_description">Choose your preferred theme and language to get started with a comfortable, tailored experience that suits your style.</string>
    <string name="onboarding_start_title">Personalize Your Experience</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="us_english">US English</string>
    <string name="egyptian_arabic">Egyptian Arabic</string>
    <string name="next_page">Next Page</string>
    <string name="previous_page">Previous Page</string>
    <string name="english">English</string>
    <string name="arabic">arabic</string>
</resources>