<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingStartFragment">

    <ImageView
        android:id="@+id/onboarding_start_illustration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/onboarding_start_description"
        android:src="@drawable/onboarding_start"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_start_title"
        app:layout_constraintDimensionRatio="1:0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/onboarding_start_title"
        style="@style/OnboardingTitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/onboarding_start_title"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_start_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_start_illustration" />

    <TextView
        android:id="@+id/onboarding_start_description"
        style="@style/OnboardingDescriptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/onboarding_start_description"
        app:layout_constraintBottom_toTopOf="@+id/label_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_start_title" />

    <TextView
        android:id="@+id/label_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/language"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/label_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_start_description" />

    <ImageView
        android:id="@+id/imageView_lang_us"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/english"
        android:padding="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_flag_us"
        app:layout_constraintBottom_toBottomOf="@+id/label_language"
        app:layout_constraintEnd_toStartOf="@+id/imageView_lang_eg"
        app:layout_constraintTop_toTopOf="@+id/label_language"
        tools:background="@drawable/flag_border_selected" />

    <ImageView
        android:id="@+id/imageView_lang_eg"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/arabic"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_flag_eg"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_lang_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_lang_us" />

    <TextView
        android:id="@+id/label_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/theme"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_language" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/label_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_theme"
        app:thumbIcon="@drawable/drawable_thumb_icon_selector"
        app:thumbIconSize="24dp"
        app:thumbIconTint="@color/color_thumb_tint_selector"
        app:thumbTint="@color/theme_switch_thumb_background_tint"
        app:trackTint="@color/theme_switch_track_tint" />

</androidx.constraintlayout.widget.ConstraintLayout>